# MLOps-Project-Generator

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
backend/: pyproject.toml  render.yaml
generator/: cli.py  prompts.py  renderer.py  utils.py  validators.py
scripts/: publish.py
templates/common/: README.md.j2  requirements.txt.j2
templates/sklearn/src/models/: model.py.j2
tests/: conftest.py  test_cli.py  test_renderer.py  test_validators.py
web_ui/: package-lock.json  package.json
web_ui/api/: generate.py  options.py
web_ui/app/api/download/[taskId]/: route.js
web_ui/app/api/generate/: route.js
web_ui/app/api/options/: route.js
web_ui/app/api/status/[taskId]/: route.js
web_ui/src/components/: MLOpsForm.tsx  OptionCards.tsx
