[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlops-generator-backend"
version = "1.0.0"
description = "Backend API for MLOps Project Generator"
authors = ["HARSHHAA <contact@example.com>"]
readme = ""
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.5.0"
python-multipart = ">=0.0.6"
aiofiles = ">=23.2.0"
jinja2 = ">=3.0.0"
pyyaml = ">=6.0"
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
